--- a/src/sections/L1sec5-breakdown.html
+++ b/src/sections/L1sec5-breakdown.html
@@ -17,20 +17,20 @@
                     </div>
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                         <div class="self-stretch justify-start items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Un portofoliu gata de personalizat, care prezintă serviciile și prețurile tale într-un mod clar și profesionist.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <dp class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Îl trimiți clienților potențiali pentru a le arăta ce oferi și pentru a seta așteptările corecte.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Te ajută să faci o impresie excelentă încă de la primul contact, oferind informații clare și bine organizate.</p>
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/assets/images/placeholder-img2-368x190.png" />
+                        <img class="" src="/src/assets/images/placeholder-img2-368x190.png" />
                     </div>
                 </div>
                 <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex">
@@ -41,20 +41,20 @@
                     </div>
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                         <div class="self-stretch justify-start items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">O propunere detaliată, concepută pentru a prezenta soluția ta și modul în care poți ajuta clientul.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <dp class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">După ce ai discutat cu un client potențial și ai înțeles nevoile sale, trimite propunerea pentru a-i câștiga încrederea.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Îți crește șansele de a semna un contract, arătând profesionalism și organizare.</p>
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/assets/images/placeholder-img3-368x190.png" />
+                        <img class="" src="/src/assets/images/placeholder-img3-368x190.png" />
                     </div>
                 </div>
                 <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex">
@@ -65,28 +65,28 @@
                     </div>
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                         <div class="self-stretch justify-start items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Un chestionar detaliat, care te ajută să colectezi informațiile esențiale despre clienți și afacerile lor.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <dp class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Pentru începutul colaborării, pentru a înțelege mai bine nevoile, obiectivele și brandul clientului.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Îți oferă claritate și îți permite să livrezi soluții personalizate care să răspundă așteptărilor clientului.</p>
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/assets/images/placeholder-img4-368x190.png" />
+                        <img class="" src="/src/assets/images/placeholder-img4-368x190.png" />
                     </div>
                 </div>
             </div>
-            <div class="self-stretch flex-col justify-start items-center gap-4 flex">
-                <div class="self-stretch px-6 py-4 bg-red-650 rounded-lg justify-center items-center gap-2 inline-flex">
-                    <div class="text-center text-grays-75 text-xl font-bold ">Ia Toolkit-ul Acum</div>
+            <div class="self-stretch flex-col justify-start items-center flex">
+                <div class="flex justify-center items-center mb-4 py-2 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                    <a href="https://sipunct.com/" class="text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
                 </div>
-                <p class="self-stretch text-center text-grays-800 text-base font-medium ">100% satisfacție garantată sau banii înapoi.</p>
+                <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
             </div>
             <div class="self-stretch flex-col justify-start items-start gap-8 flex">
                 <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex">
@@ -97,20 +97,20 @@
                     </div>
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                         <div class="self-stretch justify-start items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Un ghid detaliat pentru crearea și implementarea unei strategii de social media bine structurate.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <dp class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Pentru a dezvolta un plan clar de postări, campanii și obiective de social media pentru clienții tăi.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Îți oferă un cadru clar și un plan concret pentru a obține rezultate măsurabile pentru clienți.</p>
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/assets/images/placeholder-img5-368x190.png" />
+                        <img class="" src="/src/assets/images/placeholder-img5-368x190.png" />
                     </div>
                 </div>
                 <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex">
@@ -121,20 +121,20 @@
                     </div>
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                         <div class="self-stretch justify-start items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Un contract personalizabil care stabilește termenii și condițiile colaborării.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <dp class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Înainte de a începe să lucrezi cu un client, pentru a formaliza și securiza înțelegerea.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Asigură o colaborare transparentă și fără riscuri, protejând ambele părți.</p>
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/assets/images/placeholder-img368x190.png" />
+                        <img class="" src="/src/assets/images/placeholder-img368x190.png" />
                     </div>
                 </div>
                 <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex">
@@ -145,20 +145,20 @@
                     </div>
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                         <div class="self-stretch justify-start items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">O colecție de șabloane profesionale pentru e-mailuri, potrivite pentru diverse scenarii din social media management.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <dp class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Pentru onboarding, follow-up, cereri de aprobare, actualizări de performanță și alte situații frecvente.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Îți economisește timp și îți oferă un ton profesionist în comunicarea cu clienții.</p>
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/assets/images/placeholder-img368x190.png" />
+                        <img class="" src="/src/assets/images/placeholder-img368x190.png" />
                     </div>
                 </div>
                 <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex">
@@ -169,28 +169,28 @@
                     </div>
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                         <div class="self-stretch justify-start items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Un ghid pas cu pas pentru a structura apelurile de descoperire și pentru a transforma conversațiile în colaborări reale.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <dp class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">În timpul apelurilor cu clienți potențiali, pentru a înțelege nevoile lor și pentru a le prezenta soluțiile tale.</p>
                         </div>
                         <div class="self-stretch justify-center items-center gap-3 inline-flex">
-                            <img src="/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
                             <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Te ajută să conduci apeluri clare și eficiente, lăsând o impresie puternică și profesionistă.</p>
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/assets/images/placeholder-img5-368x190.png" />
+                        <img class="" src="/src/assets/images/placeholder-img5-368x190.png" />
                     </div>
                 </div>
             </div>
-            <div class="self-stretch flex-col justify-start items-center gap-4 flex">
-                <div class="self-stretch px-6 py-4 bg-red-650 rounded-lg justify-center items-center gap-2 inline-flex">
-                    <div class="text-center text-grays-75 text-xl font-bold ">Ia Toolkit-ul Acum</div>
+            <div class="self-stretch flex-col justify-start items-center flex">
+                <div class="flex justify-center items-center mb-4 py-2 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                    <a href="https://sipunct.com/" class="text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
                 </div>
-                <p class="self-stretch text-center text-grays-800 text-base font-medium ">100% satisfacție garantată sau banii înapoi.</p>
+                <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
             </div>
         </div>
     </div>
