--- a/src/sections/hero-sec.html
+++ b/src/sections/hero-sec.html
@@ -4,10 +4,10 @@
             <div class="w-full">
                 <div class="w-full">
                     <div class="w-full">
-                        <p class="text-base leading-4 font-sans font-semibold text-grays-800">Te simți pierdut în încercarea de a începe o carieră în social media management?</p>
+                        <p class="mb-2 text-base leading-4 font-sans font-semibold text-grays-800">Te simți pierdut în încercarea de a începe o carieră în social media management?</p>
                         <h1 class="text-3xl font-serif font-bold text-grays-950">Construiește-ți cariera în social media management fără stres, fără confuzie și fără pierderi de timp.</h1>
                     </div>
-                    <div class="w-full">
+                    <div class="my-2 w-full">
                         <div class="w-full">
                 
                         </div>
@@ -17,7 +17,7 @@
                 <p class="text-xl font-sans font-semibold text-grays-800">Toolkit-ul pentru Start Rapid în Social Media îți oferă toate documentele, șabloanele și strategiile necesare pentru a atrage clienți, a economisi timp și a lucra profesionist încă din prima zi. Totul este pregătit pentru tine, trebuie doar să începi!</p>
             </div>
             <div class="mt-4 w-full">
-                <div class="flex justify-center items-center my-4 py-2 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red hover:border-2 hover:border-red-650">
+                <div class="flex justify-center items-center my-4 py-2 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
                     <a href="https://sipunct.com/" class="text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
                 </div>
                 <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
