added section up until sec8, a few more left

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <div class="" data-include="/src/sections/L1sec3-f-pacing.html"></div>
             <div class="" data-include="/src/sections/L1sec4-intro.html"></div>
             <div class="" data-include="/src/sections/L1sec5-breakdown.html"></div>
+            <div class="" data-include="/src/sections/L1sec6-bonuses.html"></div>
+            <div class="" data-include="/src/sections/L1sec7-about.html"></div>
+            <div class="" data-include="/src/sections/L1sec8-mainCTA.html"></div>
         </main>
         <footer>
 
