--- a/src/sections/L1sec4-intro.html
+++ b/src/sections/L1sec4-intro.html
@@ -1,9 +1,5 @@
 <div class="px-4 bg-grays-0 justify-start items-center gap-2 inline-flex">
-    <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-10 inline-flex">
-        <div class="self-stretch flex-col justify-start items-start gap-4 flex">
-            <p class="self-stretch text-grays-1000 text-lg font-normal">Ți-ai imaginat cum ar fi să ai deja totul sub control – să știi exact ce să faci, cum să impresionezi clienții și să construiești o carieră sigură în social media management. Dar ce te oprește? Cel mai probabil, lipsa unor instrumente clare, a unui plan bine definit sau a resurselor potrivite.</p>
-            <p class="self-stretch text-grays-1000 text-lg font-normal">Aceasta este partea în care îți facem lucrurile mult mai simple. Toolkit-ul pentru Start Rapid în Social Media îți oferă exact ceea ce îți trebuie pentru a transforma acel vis în realitate, chiar acum.</p>
-        </div>
+    <div class="grow shrink basis-0 py-16 flex-col justify-start items-start inline-flex">
         <div class="px-4 pt-6 pb-6 bg-beige-50 rounded-2xl flex-col justify-start items-start gap-6 flex overflow-hidden">
             <div class="self-stretch flex-col justify-start items-start gap-4 flex">
                 <div class="self-stretch flex-col justify-start items-start gap-1 flex">
@@ -36,8 +32,8 @@
                     </div>
                 </div>
                 <div class="self-stretch flex-col justify-start items-center flex">
-                    <div class="flex justify-center items-center my-4 py-2 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
-                        <a href="https://sipunct.com/" class="text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                    <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                        <a href="https://sipunct.com/" class="py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
                     </div>
                     <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
                 </div>
