--- a/src/sections/L1sec5-breakdown.html
+++ b/src/sections/L1sec5-breakdown.html
@@ -83,8 +83,8 @@
                 </div>
             </div>
             <div class="self-stretch flex-col justify-start items-center flex">
-                <div class="flex justify-center items-center mb-4 py-2 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
-                    <a href="https://sipunct.com/" class="text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                    <a href="https://sipunct.com/" class="py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
                 </div>
                 <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
             </div>
@@ -187,8 +187,8 @@
                 </div>
             </div>
             <div class="self-stretch flex-col justify-start items-center flex">
-                <div class="flex justify-center items-center mb-4 py-2 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
-                    <a href="https://sipunct.com/" class="text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                    <a href="https://sipunct.com/" class="py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
                 </div>
                 <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
             </div>
