--- a/src/sections/navigation.html
+++ b/src/sections/navigation.html
@@ -2,7 +2,7 @@
     <div class="w-32 h-10 flex-col justify-center items-center inline-flex">
         <img src="/src/assets/images/&PUNCT-LOGO-RightType.png" alt="Si Punct Media Logo" >
     </div>
-    <div class="px-5 py-2 rounded-lg border-2 border-grays-300 justify-center items-center gap-2 flex">
-        <div class="text-center text-grays-800 text-lg font-semibold">Contactează-mă</div>
+    <div class="rounded-lg border-2 border-grays-700 justify-center items-center gap-2 flex hover:border-red-650 hover:bg-grays-0">
+        <a class="px-5 py-2 text-center text-grays-800 text-lg font-semibold" href="https://www.instagram.com/bustiuc.s/">Contactează-mă</a>
     </div>
 </div>
