--- a/src/sections/hero-sec.html
+++ b/src/sections/hero-sec.html
@@ -17,8 +17,8 @@
                 <p class="text-xl font-sans font-semibold text-grays-800">Toolkit-ul pentru Start Rapid în Social Media îți oferă toate documentele, șabloanele și strategiile necesare pentru a atrage clienți, a economisi timp și a lucra profesionist încă din prima zi. Totul este pregătit pentru tine, trebuie doar să începi!</p>
             </div>
             <div class="mt-4 w-full">
-                <div class="flex justify-center items-center my-4 py-2 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
-                    <a href="https://sipunct.com/" class="text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                    <a href="https://sipunct.com/" class="py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
                 </div>
                 <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
             </div>
