finnieshed the page, need to do the functionalities next

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
             <div class="" data-include="/src/sections/L1sec6-bonuses.html"></div>
             <div class="" data-include="/src/sections/L1sec7-about.html"></div>
             <div class="" data-include="/src/sections/L1sec8-mainCTA.html"></div>
+            <div class="" data-include="/src/sections/L1sec9-guarantee.html"></div>
+            <div class="" data-include="/src/sections/L1sec10-signup.html"></div>
         </main>
-        <footer>
-
+        <footer class="flex flex-col">
+            <div class="" data-include="/src/sections/footer.html"></div>
         </footer>
     </body>
 </html>
