added cloudflare and mailerlite integrations

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Si Punct Media</title>
         <link rel="stylesheet" href="/src/output.css">
         <script src="/src/include.js" defer></script>
+        <script src="/src/mailerlite.js" defer></script>
     </head>
     <body class="flex flex-col bg-grays-75">
         <header class="flex flex-col">
