--- a/src/sections/L1sec10-signup.html
+++ b/src/sections/L1sec10-signup.html
@@ -5,6 +5,12 @@
             <div class="self-stretch text-grays-1000] text-lg font-normal ">Cred că ești destul de interesat, dar presupun cu careva rețineri. Pentru a te convinge, îți ofer ghidul pentru un apel de succes cu clienții...</div>
             <div class="self-stretch text-center text-grays-1000] text-2xl font-bold font-serif">Absolut gratuit!</div>
             <div class="self-stretch text-grays-1000] text-lg font-normal ">Tot ce trebuie să faci este să introduci adresa ta de e-mail, pentru a primi ghidul pe e-mail.</div>
+            <form id="emailForm">
+                <input type="email" id="email" placeholder="Introdu emailul tău" required>
+                <button type="submit">Primește Ghidul</button>
+            </form>
+            <p id="message"></p>
+            <p id="message"></p>
             <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                 <div class="self-stretch p-4 bg-grays-25 rounded-lg border border-[#b98049] justify-start items-center gap-2 inline-flex">
                     <div class="text-[#7e8897] text-lg font-normal ">Adresa de e-mail</div>
