--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="/src/output.css">
         <script src="/src/include.js" defer></script>
         <script src="/src/mailerlite.js" defer></script>
+        <script src="/src/sections/timer.js" defer></script>
     </head>
     <body class="flex flex-col bg-grays-75">
         <header class="flex flex-col">
