--- a/src/sections/L1sec10-signup.html
+++ b/src/sections/L1sec10-signup.html
@@ -5,27 +5,19 @@
             <div class="self-stretch text-grays-1000] text-lg font-normal ">Cred că ești destul de interesat, dar presupun cu careva rețineri. Pentru a te convinge, îți ofer ghidul pentru un apel de succes cu clienții...</div>
             <div class="self-stretch text-center text-grays-1000] text-2xl font-bold font-serif">Absolut gratuit!</div>
             <div class="self-stretch text-grays-1000] text-lg font-normal ">Tot ce trebuie să faci este să introduci adresa ta de e-mail, pentru a primi ghidul pe e-mail.</div>
-            <section class="py-12 px-4">
-                <form id="emailForm" class="max-w-md mx-auto">
-                    <div class="mb-4">
-                        <input type="email" id="email" required
+            <div class="self-stretch flex-col justify-start items-start gap-3 flex">
+                <form id="emailForm" class="self-stretch w-full">
+                    <div class="self-stretch bg-grays-25 rounded-lg border border-[#b98049] justify-start">
+                        <input class="self-stretch text-[#7e8897] py-4 pl-4 pr-[20%] text-lg font-normal" type="email" id="email" required
                             class="w-full px-4 py-2 border rounded-lg"
                             placeholder="Adresa ta de email">
                     </div>
                     <button type="submit" 
-                        class="w-full bg-blue-600 text-white py-2 px-4 rounded-lg">
-                        Abonează-te
+                        class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650 text-xl font-sans font-bold text-grays-75 py-2 px-[15%]">
+                        Obține Ghidul Gratuit!
                     </button>
                     <div id="message" class="mt-2 text-center"></div>
                 </form>
-            </section>
-            <div class="self-stretch flex-col justify-start items-start gap-3 flex">
-                <div class="self-stretch p-4 bg-grays-25 rounded-lg border border-[#b98049] justify-start items-center gap-2 inline-flex">
-                    <div class="text-[#7e8897] text-lg font-normal ">Adresa de e-mail</div>
-                </div>
-                <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
-                    <a href="https://sipunct.com/" class="py-2 px-[15%] text-xl font-sans font-bold text-grays-75">Obține Ghidul Gratuit!</a>
-                </div>
             </div>
         </div>
         <div class="self-stretch rounded-2xl justify-center items-center inline-flex overflow-hidden">
