--- a/src/sections/L1sec8-mainCTA.html
+++ b/src/sections/L1sec8-mainCTA.html
@@ -140,8 +140,19 @@
                         <div class="self-stretch justify-start items-center gap-4 inline-flex">
                             <div class="grow shrink basis-0 text-grays-1000 text-base font-normal ">Din cauza numărului mare de persoane care procură acest kit, acest bonus este valabil GRATIS pentru o perioadă limitată de timp: </div>
                         </div>
-                        <div class="self-stretch pb-2 bg-grays-75 rounded-lg border-2 border-[#ff0000] justify-center items-center gap-2 inline-flex">
-                            <div class="grow shrink basis-0 text-center text-[#ff0000] text-3xl font-medium font-serif">12:56:32</div>
+                        <div class="timer-container self-stretch p-2 pb-3 bg-grays-75 rounded-lg border-2 border-[#ff0000] justify-center items-center flex flex-col">
+                            <div class="inline-flex items-center gap-2.5">
+                                <div class="text-[#ff0000] text-sm">zile</div>
+                                <div class="text-[#ff0000] text-sm">ore</div>
+                                <div class="text-[#ff0000] text-sm">min</div>
+                                <div class="text-[#ff0000] text-sm">sec</div>
+                            </div>
+                            <div class="inline-flex items-center gap-2">
+                                <div class="days text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
+                                <div class="hours text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
+                                <div class="minutes text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
+                                <div class="seconds text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
+                            </div>
                         </div>
                         <div class="self-stretch text-grays-1000 text-sm font-normal ">Nu îți face griji, chiar dacă nu reușești să prinzi acestă ofertă gratis, când procuri acest kit, poți opta pentru design propriu contra cost, sau dacă ne place proiectul tău, îți oferim un design personalizat gratis!</div>
                         <div class="self-stretch flex-col justify-start items-center flex">
