updated some creatives and timer

--- a/src/sections/L1sec4-intro.html
+++ b/src/sections/L1sec4-intro.html
@@ -9,7 +9,7 @@
                 <p class="self-stretch text-center text-grays-1000 text-xl font-normal ">un sistem complet creat special pentru începători ca tine, care îți oferă toate resursele necesare pentru a începe cu succes.</p>
             </div>
             <div class="relative rounded-2xl">
-                <img src="/src/assets/images/placeholder-img368x190.png" alt="placeholder image">
+                <img src="/src/assets/images/[1x1]-redBG-nTv1-site&socials@1.5x.png" alt="placeholder image">
             </div>
             <div class="self-stretch flex-col justify-start items-start gap-2 flex">
                 <div class="self-stretch px-4 py-6 bg-grays-0 rounded-2xl flex-col justify-start items-start gap-4 flex overflow-hidden">
