--- a/src/sections/L1sec5-breakdown.html
+++ b/src/sections/L1sec5-breakdown.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/src/assets/images/placeholder-img2-368x190.png" />
+                        <img class="" src="/src/assets/images/products/[6x5]-product-1.png" />
                     </div>
                 </div>
                 <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex">
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/src/assets/images/placeholder-img3-368x190.png" />
+                        <img class="" src="/src/assets/images/products/[6x5]-product-2.png" />
                     </div>
                 </div>
                 <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex">
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/src/assets/images/placeholder-img4-368x190.png" />
+                        <img class="" src="/src/assets/images/products/[6x5]-product-3.png" />
                     </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/src/assets/images/placeholder-img5-368x190.png" />
+                        <img class="" src="/src/assets/images/products/[6x5]-product-4.png" />
                     </div>
                 </div>
                 <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex">
@@ -134,7 +134,7 @@
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/src/assets/images/placeholder-img368x190.png" />
+                        <img class="" src="/src/assets/images/products/[6x5]-product-5.png" />
                     </div>
                 </div>
                 <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex">
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/src/assets/images/placeholder-img368x190.png" />
+                        <img class="" src="/src/assets/images/products/[6x5]-product-6.png" />
                     </div>
                 </div>
                 <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex">
@@ -182,7 +182,7 @@
                         </div>
                     </div>
                     <div class="rounded-2xl justify-end items-center inline-flex overflow-hidden">
-                        <img class="" src="/src/assets/images/placeholder-img5-368x190.png" />
+                        <img class="" src="/src/assets/images/products/[6x5]-product-7.png" />
                     </div>
                 </div>
             </div>
