--- a/src/sections/hero-sec.html
+++ b/src/sections/hero-sec.html
@@ -23,8 +23,8 @@
                 <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
             </div>
         </div>
-        <div class="mt-4 h-20 w-full bg-grays-800">
-    
+        <div class="mt-4 w-full">
+            <img src="/src/assets/images/[4x3]-beBG-wTv2-site@1.5x.png" alt="placeholder image">
         </div>
     </div>
 </div>
