--- a/src/sections/announcement.html
+++ b/src/sections/announcement.html
@@ -1,4 +1,4 @@
 <!-- Announcement Bar -->
-<div class="fixed inset-x-0 top-0 bg-beige-300 text-beige-900 font-sans font-semibold text-sm p-4 text-center z-50">
+<div class="fixed inset-x-0 top-0 bg-beige-300 text-beige-900 font-sans font-semibold text-sm p-4 text-center z-50 md:max-lg:px-16 lg:px-36">
     <p>🎉 Primele 10 comenzi beneficiază de design personalizat! <a href="#" class="underline">Comandă acum!</a></p>
 </div>
