--- a/src/sections/footer.html
+++ b/src/sections/footer.html
@@ -1,4 +1,4 @@
-<div class="px-4 bg-grays-0 justify-start items-center gap-2 inline-flex w-full">
+<div class="px-4 bg-grays-0 justify-start items-center gap-2 inline-flex w-full md:max-lg:px-16 lg:px-36">
     <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-8 inline-flex">
         <div class="self-stretch flex-col justify-start items-center gap-12 flex">
             <div class="h-16 w-48 self-center flex-col justify-start items-center gap-6 flex overflow-hidden"><a href="#"><img class="w-full h-auto" src="/src/assets/images/&PUNCT-LOGO-RightType.png" alt="Si Punct Media Logo" ></a></div>
