--- a/src/sections/hero-sec.html
+++ b/src/sections/hero-sec.html
@@ -1,11 +1,11 @@
-<div class="h-auto w-full px-4">
-    <div class="gap-6 h-full w-full py-10">
+<div class="h-auto w-full px-4 md:max-lg:px-16 lg:px-36">
+    <div class="gap-6 h-full w-full py-10 justify-start items-center  lg:inline-flex lg:gap-16">
         <div class="w-full ">
-            <div class="w-full">
+            <div class="w-full flex flex-col lg:gap-3">
                 <div class="w-full">
                     <div class="w-full">
                         <p class="mb-2 text-base leading-4 font-sans font-semibold text-grays-800">Te simți pierdut în încercarea de a începe o carieră în social media management?</p>
-                        <h1 class="text-3xl font-serif font-bold text-grays-950">Construiește-ți cariera în social media management fără stres, fără confuzie și fără pierderi de timp.</h1>
+                        <h1 class="text-3xl font-serif font-bold text-grays-950 lg:text-4xl">Construiește-ți cariera în social media management fără stres, fără confuzie și fără pierderi de timp.</h1>
                     </div>
                     <div class="my-2 w-full">
                         <div class="w-full">
@@ -14,7 +14,7 @@
                         <p class="text-base leading-4 font-sans font-semibold text-grays-800">300+ specialiști internaționali</p>
                     </div>
                 </div>
-                <p class="text-xl font-sans font-semibold text-grays-800">Toolkit-ul pentru Start Rapid în Social Media îți oferă toate documentele, șabloanele și strategiile necesare pentru a atrage clienți, a economisi timp și a lucra profesionist încă din prima zi. Totul este pregătit pentru tine, trebuie doar să începi!</p>
+                <p class="text-xl leading-7 font-sans font-semibold text-grays-800">Toolkit-ul pentru Start Rapid în Social Media îți oferă toate documentele, șabloanele și strategiile necesare pentru a atrage clienți, a economisi timp și a lucra profesionist încă din prima zi. Totul este pregătit pentru tine, trebuie doar să începi!</p>
             </div>
             <div class="mt-4 w-full">
                 <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
@@ -23,8 +23,11 @@
                 <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
             </div>
         </div>
-        <div class="mt-4 w-full">
-            <img src="/src/assets/images/[4x3]-beBG-wTv2-site@1.5x.png" alt="placeholder image">
+        <div class="mt-4 w-full lg:hidden ">
+            <img class="w-full" src="/src/assets/images/[4x3]-beBG-wTv2-site@1.5x.png" alt="placeholder image">
+        </div>
+        <div class="mt-4 w-full hidden lg:flex ">
+            <img class="w-full rounded-2xl" src="/src/assets/images/[4x3]-beBG-wTv2-site@1.5x.png" alt="placeholder image">
         </div>
     </div>
 </div>
