--- a/src/sections/navigation.html
+++ b/src/sections/navigation.html
@@ -1,4 +1,4 @@
-<div class="h-20 px-4 py-3.5 bg-grays-175 justify-between items-center flex flex-row">
+<div class="h-20 px-4 py-3.5 bg-grays-175 justify-between items-center flex flex-row md:max-lg:px-16 lg:px-36">
     <div class="w-32 h-10 flex-col justify-center items-center inline-flex">
         <img src="/src/assets/images/&PUNCT-LOGO-RightType.png" alt="Si Punct Media Logo" >
     </div>
