--- a/src/sections/L1sec3-f-pacing.html
+++ b/src/sections/L1sec3-f-pacing.html
@@ -1,4 +1,4 @@
-<div class="px-4 bg-beige-200 justify-start items-center gap-2 inline-flex">
+<div class="px-4 bg-beige-200 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36">
     <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-8 inline-flex">
         <div class="self-stretch flex-col justify-start items-start gap-4 flex">
             <div class="self-stretch flex-col justify-start items-start gap-1 flex">
