updated responsiveness up until breakdown

--- a/src/sections/hero-sec.html
+++ b/src/sections/hero-sec.html
@@ -1,5 +1,5 @@
 <div class="h-auto w-full px-4 md:max-lg:px-16 lg:px-36">
-    <div class="gap-6 h-full w-full py-10 justify-start items-center  lg:inline-flex lg:gap-16">
+    <div class="gap-6 h-full w-full py-10 justify-start items-center lg:py-24 lg:inline-flex lg:gap-16">
         <div class="w-full ">
             <div class="w-full flex flex-col lg:gap-3">
                 <div class="w-full">
