--- a/src/sections/L1sec3-f-pacing.html
+++ b/src/sections/L1sec3-f-pacing.html
@@ -1,25 +1,25 @@
 <div class="px-4 bg-beige-200 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36">
-    <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-8 inline-flex">
+    <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-8 inline-flex lg:py-20">
         <div class="self-stretch flex-col justify-start items-start gap-4 flex">
             <div class="self-stretch flex-col justify-start items-start gap-1 flex">
-                <h3 class="self-stretch text-center text-grays-1000 text-base font-medium">Doar imaginează-ți...</h3>
-                <h2 class="self-stretch text-center text-red-650 text-2xl font-bold font-serif">că începi chiar azi să lucrezi în social media management.</h2>
+                <h3 class="self-stretch text-center text-grays-1000 text-base font-medium lg:text-xl md:max-lg:text-xl">Doar imaginează-ți...</h3>
+                <h2 class="self-stretch text-center text-red-650 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">că începi chiar azi să lucrezi în social media management.</h2>
             </div>
             <div class="self-stretch justify-start items-center gap-4 inline-flex">
                 <div class="w-6 h-6 relative  overflow-hidden"><img src="/src/assets/images/icons/sparkling-fill.png" alt="stars icon"></div>
-                <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal">Primești acces instant la Toolkit-ul pentru Start Rapid în Social Media imediat după achiziție. </p>
+                <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">Primești acces instant la Toolkit-ul pentru Start Rapid în Social Media imediat după achiziție. </p>
             </div>
             <div class="self-stretch justify-start items-center gap-4 inline-flex">
                 <div class="w-6 h-6 relative  overflow-hidden"><img src="/src/assets/images/icons/sparkling-fill.png" alt="stars icon"></div>
-                <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal">Deschizi ghidul detaliat și începi să personalizezi primele documente: propuneri, contracte și strategii.</p>
+                <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">Deschizi ghidul detaliat și începi să personalizezi primele documente: propuneri, contracte și strategii.</p>
             </div>
             <div class="self-stretch justify-start items-center gap-4 inline-flex">
                 <div class="w-6 h-6 relative  overflow-hidden"><img src="/src/assets/images/icons/sparkling-fill.png" alt="stars icon"></div>
-                <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal">În doar câteva ore, ai totul pregătit pentru a atrage primii clienți. Înțelegi exact ce trebuie să faci și cum să implementezi pașii necesari pentru succes. Nu mai pierzi timp pe detalii inutile sau pe încercări eșuate. </p>
+                <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">În doar câteva ore, ai totul pregătit pentru a atrage primii clienți. Înțelegi exact ce trebuie să faci și cum să implementezi pașii necesari pentru succes. Nu mai pierzi timp pe detalii inutile sau pe încercări eșuate. </p>
             </div>
         </div>
-        <div class="self-stretch">
-            <p class="text-grays-1000 text-lg font-normal">Acesta este viitorul pe care Toolkit-ul pentru Start Rapid în Social Media îl face <span class="text-grays-1000 text-lg font-semibold">prezent</span> pentru tine.</p>
+        <div class="self-stretch lg:text-center md:max-lg:text-center">
+            <p class="text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">Acesta este viitorul pe care Toolkit-ul pentru Start Rapid în Social Media îl face <span class="text-grays-1000 text-lg font-semibold lg:text-xl md:max-lg:text-xl">prezent</span> pentru tine.</p>
         </div>
     </div>
 </div>
