--- a/src/sections/L1sec4-intro.html
+++ b/src/sections/L1sec4-intro.html
@@ -1,41 +1,43 @@
 <div class="px-4 bg-grays-0 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36">
-    <div class="grow shrink basis-0 py-16 flex-col justify-start items-start inline-flex">
-        <div class="px-4 pt-6 pb-6 bg-beige-50 rounded-2xl flex-col justify-start items-start gap-6 flex overflow-hidden">
+    <div class="grow shrink basis-0 py-16 flex-col justify-start items-start inline-flex lg:py-20">
+        <div class="px-4 pt-6 pb-6 bg-beige-50 rounded-2xl flex-col justify-start items-start gap-6 flex overflow-hidden lg:px-10 lg:pt-12 lg:pb-12">
             <div class="self-stretch flex-col justify-start items-start gap-4 flex">
                 <div class="self-stretch flex-col justify-start items-start gap-1 flex">
-                    <h3 class="self-stretch text-center text-red-650 text-base font-medium ">INTRODUCEM</h3>
-                    <h2 class="self-stretch text-center text-grays-1000 text-2xl font-bold">Toolkit-ul pentru Start Rapid în Social Media</h2>
+                    <h3 class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">INTRODUCEM</h3>
+                    <h2 class="self-stretch text-center text-grays-1000 text-2xl font-bold lg:text-3xl md:max-lg:text-3xl">Toolkit-ul pentru Start Rapid în Social Media</h2>
                 </div>
-                <p class="self-stretch text-center text-grays-1000 text-xl font-normal ">un sistem complet creat special pentru începători ca tine, care îți oferă toate resursele necesare pentru a începe cu succes.</p>
+                <p class="self-stretch text-center text-grays-1000 text-xl font-normal lg:text-xl md:max-lg:text-xl">un sistem complet creat special pentru începători ca tine, care îți oferă toate resursele necesare pentru a începe cu succes.</p>
             </div>
-            <div class="relative rounded-2xl">
-                <img src="/src/assets/images/[1x1]-redBG-nTv1-site&socials@1.5x.png" alt="placeholder image">
-            </div>
-            <div class="self-stretch flex-col justify-start items-start gap-2 flex">
-                <div class="self-stretch px-4 py-6 bg-grays-0 rounded-2xl flex-col justify-start items-start gap-4 flex overflow-hidden">
-                    <h3 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">În mai puțin de o oră...</h3>
-                    <div class="self-stretch justify-start items-center gap-4 inline-flex">
-                        <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
-                        <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Vei ști exact ce să faci — ghidul pas cu pas îți va oferi claritate și încredere pentru fiecare etapă.</p>
-                    </div>
-                    <div class="self-stretch justify-start items-center gap-4 inline-flex">
-                        <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
-                        <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Vei lăsa o impresie profesionistă — șabloanele și resursele incluse sunt create să inspire încredere clienților încă de la primul contact.</p>
-                    </div>
-                    <div class="self-stretch justify-start items-center gap-4 inline-flex">
-                        <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
-                        <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Vei economisi ore întregi — totul este organizat și pregătit, astfel încât să nu pierzi timp pe detalii inutile.</p>
-                    </div>
-                    <div class="self-stretch justify-start items-center gap-4 inline-flex">
-                        <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
-                        <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Vei avea control complet — nu vei mai simți confuzie sau stres, ci vei ști exact ce pași să urmezi pentru succes.</p>
-                    </div>
+            <div class="self-stretch flex-col justify-start items-center gap-4 flex lg:flex-row lg:gap-10">
+                <div class="relative rounded-2xl lg:basis-auto ">
+                    <img src="/src/assets/images/[1x1]-redBG-nTv1-site&socials@1.5x.png" alt="placeholder image">
                 </div>
-                <div class="self-stretch flex-col justify-start items-center flex">
-                    <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
-                        <a href="https://sipunct.com/" class="py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                <div class="self-stretch flex-col justify-start items-start gap-2 flex lg:basis-3/5">
+                    <div class="self-stretch px-4 py-6 bg-grays-0 rounded-2xl flex-col justify-start items-start gap-4 flex overflow-hidden">
+                        <h3 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">În mai puțin de o oră...</h3>
+                        <div class="self-stretch justify-start items-center gap-4 inline-flex">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Vei ști exact ce să faci — ghidul pas cu pas îți va oferi claritate și încredere pentru fiecare etapă.</p>
+                        </div>
+                        <div class="self-stretch justify-start items-center gap-4 inline-flex">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Vei lăsa o impresie profesionistă — șabloanele și resursele incluse sunt create să inspire încredere clienților încă de la primul contact.</p>
+                        </div>
+                        <div class="self-stretch justify-start items-center gap-4 inline-flex">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Vei economisi ore întregi — totul este organizat și pregătit, astfel încât să nu pierzi timp pe detalii inutile.</p>
+                        </div>
+                        <div class="self-stretch justify-start items-center gap-4 inline-flex">
+                            <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
+                            <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal ">Vei avea control complet — nu vei mai simți confuzie sau stres, ci vei ști exact ce pași să urmezi pentru succes.</p>
+                        </div>
                     </div>
-                    <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                    <div class="self-stretch flex-col justify-start items-center flex">
+                        <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                            <a href="https://sipunct.com/" class="py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                        </div>
+                        <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                    </div>
                 </div>
             </div>
         </div>
