--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
         <script src="/src/include.js" defer></script>
         <script src="/src/mailerlite.js" defer></script>
         <script src="/src/sections/timer.js" defer></script>
+        <script src="https://cdn.lottielab.com/s/lottie-player@1.x/player-web.min.js"></script>
     </head>
     <body class="flex flex-col bg-grays-75">
         <header class="flex flex-col">
-            <div class="" data-include="/src/sections/navigation.html"></div>
+            <div class="bg-grays-175" data-include="/src/sections/navigation.html"></div>
         </header>
         <main class="flex flex-col">
             <div class="" data-include="/src/sections/hero-sec.html"></div>
-            <div class="" data-include="/src/sections/L1sec2-emp.html"></div>
-            <div class="" data-include="/src/sections/L1sec3-f-pacing.html"></div>
-            <div class="" data-include="/src/sections/L1sec4-intro.html"></div>
-            <div class="" data-include="/src/sections/L1sec5-breakdown.html"></div>
-            <div class="" data-include="/src/sections/L1sec6-bonuses.html"></div>
-            <div class="" data-include="/src/sections/L1sec7-about.html"></div>
-            <div class="" data-include="/src/sections/L1sec8-mainCTA.html"></div>
-            <div class="" data-include="/src/sections/L1sec9-guarantee.html"></div>
-            <div class="" data-include="/src/sections/L1sec10-signup.html"></div>
+            <div class="bg-grays-0" data-include="/src/sections/L1sec2-emp.html"></div>
+            <div class="bg-beige-200" data-include="/src/sections/L1sec3-f-pacing.html"></div>
+            <div class="bg-grays-0" data-include="/src/sections/L1sec4-intro.html"></div>
+            <div class="bg-grays-75" data-include="/src/sections/L1sec5-breakdown.html"></div>
+            <div class="bg-grays-0" data-include="/src/sections/L1sec6-bonuses.html"></div>
+            <div class="bg-beige-200" data-include="/src/sections/L1sec7-about.html"></div>
+            <div class="bg-grays-0" data-include="/src/sections/L1sec8-mainCTA.html"></div>
+            <div class="bg-beige-200" data-include="/src/sections/L1sec9-guarantee.html"></div>
+            <div class="bg-grays-75" data-include="/src/sections/L1sec10-signup.html"></div>
         </main>
         <footer class="flex flex-col">
-            <div class="" data-include="/src/sections/footer.html"></div>
+            <div class="bg-grays-0" data-include="/src/sections/footer.html"></div>
         </footer>
     </body>
 </html>
