--- a/src/sections/L1sec10-signup.html
+++ b/src/sections/L1sec10-signup.html
@@ -1,4 +1,4 @@
-<div class="px-4 bg-[#f8f3f3] justify-center items-center gap-2 inline-flex">
+<div class="px-4 justify-center items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px] xl:flex">
     <div class="grow shrink basis-0 self-stretch py-16 flex-col justify-start items-start gap-10 inline-flex">
         <div class="self-stretch flex-col justify-start items-start gap-4 flex">
             <div class="self-stretch text-center text-red-650 text-base font-medium ">Pentru că ai ajuns până aici...</div>
