--- a/src/sections/L1sec7-about.html
+++ b/src/sections/L1sec7-about.html
@@ -1,4 +1,4 @@
-<div class="px-4 bg-beige-200 justify-start items-center gap-2 inline-flex">
+<div class="px-4 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px] xl:flex">
     <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-8 inline-flex">
         <div class="self-stretch flex-col justify-start items-start gap-4 flex">
             <div class="self-stretch flex-col justify-start items-start gap-1 flex">
@@ -23,8 +23,8 @@
                 </div>
             </div>
             <div class="self-stretch text-grays-1000 text-lg font-normal ">Când începi, fără recenzii, singura ta armă este portofoliul tău. Fie că este format din proiecte reale sau nu, un portofoliu bine pus la punct este primul semn că știi ce faci, că ai viziune și că fiecare element este plasat cu un scop clar.</div>
-            <div class="self-stretch text-grays-1000 text-lg font-normal ">Aceeași regulă se aplică și în Social Media Management. Ca începător, îți construiești cariera pe imaginea ta, portofoliul tău și... un strop de noroc. </div>
-            <div class="self-stretch text-grays-1000 text-lg font-normal ">De aceea am creat acest Toolkit. Pentru că știu cât de greu este să începi și cât de mult contează să ai resursele potrivite de la bun început. Într-o eră în care AI schimbă regulile jocului în fiecare zi, viteza de adaptare este esențială. Acest kit îți oferă un start rapid, eficient și structurat în Social Media Management, astfel încât să nu pierzi luni întregi încercând să descoperi singur ce funcționează.</div>
+            <div class="self-stretch text-grays-1000 text-lg font-normal ">Aceeași regulă se aplică și în Social Media Marketing. Ca începător, îți construiești cariera pe imaginea ta, portofoliul tău și... un strop de noroc. </div>
+            <div class="self-stretch text-grays-1000 text-lg font-normal ">De aceea am creat acest Toolkit. Pentru că știu cât de greu este să începi și cât de mult contează să ai resursele potrivite de la bun început. Într-o eră în care AI schimbă regulile jocului în fiecare zi, viteza de adaptare este esențială. Acest kit îți oferă un start rapid, eficient și structurat în Social Media Marketing, astfel încât să nu pierzi luni întregi încercând să descoperi singur ce funcționează.</div>
             <div class="self-stretch text-center text-red-650 text-xl font-bold font-serif">Acum este rândul tău să faci primul pas către succes.</div>
             <div class="self-stretch rounded-2xl justify-center items-center inline-flex overflow-hidden">
                 <img class="" src="/src/assets/images/placeholder-img-368x368.png" />
