--- a/src/sections/L1sec8-mainCTA.html
+++ b/src/sections/L1sec8-mainCTA.html
@@ -1,4 +1,4 @@
-<div class="px-4 bg-white justify-start items-center gap-2 inline-flex">
+<div class="px-4 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px] xl:flex">
     <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-6 inline-flex">
         <div class="self-stretch flex-col justify-start items-start gap-8 flex">
             <div class="self-stretch flex-col justify-start items-start gap-4 flex">
