--- a/src/sections/L1sec9-guarantee.html
+++ b/src/sections/L1sec9-guarantee.html
@@ -1,4 +1,4 @@
-<div class="px-4 bg-beige-200 justify-start items-center gap-2 inline-flex">
+<div class="px-4 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px] xl:flex">
     <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-8 inline-flex">
         <div class="self-stretch flex-col justify-start items-start gap-8 flex">
             <div class="self-stretch flex-col justify-start items-start gap-4 flex">
@@ -9,7 +9,7 @@
                     </div>
                     <div class="self-stretch flex-col justify-start items-start gap-4 flex">
                         <div class="self-stretch flex-col justify-start items-start gap-4 flex">
-                            <div class="self-stretch text-grays-1000 text-lg font-normal ">Știu că acest toolkit te va ajuta să începi mai rapid și mai sigur în Social Media Management. De aceea, îți ofer o garanție 100% fără riscuri:</div>
+                            <div class="self-stretch text-grays-1000 text-lg font-normal ">Știu că acest toolkit te va ajuta să începi mai rapid și mai sigur în Social Media Marketing. De aceea, îți ofer o garanție 100% fără riscuri:</div>
                             <div class="self-stretch flex-col justify-start items-start gap-4 flex">
                                 <div class="self-stretch justify-start items-center gap-4 inline-flex">
                                     <div class="w-6 h-6 relative  overflow-hidden"><img src="/src/assets/images/icons/sparkling-fill.png" alt="stars icon"></div>
