--- a/src/sections/hero-sec.html
+++ b/src/sections/hero-sec.html
@@ -1,11 +1,11 @@
-<div class="h-auto w-full px-4 md:max-lg:px-16 lg:px-36">
+<div class="h-auto w-full px-4 md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px]">
     <div class="gap-6 h-full w-full py-10 justify-start items-center lg:py-24 lg:inline-flex lg:gap-16">
         <div class="w-full ">
             <div class="w-full flex flex-col lg:gap-3">
                 <div class="w-full">
                     <div class="w-full">
-                        <p class="mb-2 text-base leading-4 font-sans font-semibold text-grays-800">Te simți pierdut în încercarea de a începe o carieră în social media management?</p>
-                        <h1 class="text-3xl font-serif font-bold text-grays-950 lg:text-4xl">Construiește-ți cariera în social media management fără stres, fără confuzie și fără pierderi de timp.</h1>
+                        <p class="mb-2 text-base leading-4 font-sans font-semibold text-grays-800">Te simți pierdut în încercarea de a începe o carieră în social media marketing?</p>
+                        <h1 class="text-3xl font-serif font-bold text-grays-950 lg:text-4xl">Construiește-ți cariera în social media marketing fără stres, fără confuzie și fără pierderi de timp.</h1>
                     </div>
                     <div class="my-2 w-full">
                         <div class="w-full">
