--- a/src/sections/L1sec2-emp.html
+++ b/src/sections/L1sec2-emp.html
@@ -1,11 +1,11 @@
-<div class="h-auto w-full px-4 bg-grays-0 justify-start items-center inline-flex md:max-lg:px-16 lg:px-36">
+<div class="h-auto w-full px-4 justify-start items-center inline-flex md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px] xl:flex">
     <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-8 inline-flex lg:py-20">
         <div class="self-stretch flex-col justify-start items-start gap-4 flex">
             <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                 <h3 class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">Te simți copleșit?</h3>
                 <h2 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">Știm exact prin ce treci.</h2>
             </div>
-            <p class="self-stretch text-grays-1000 text-lg font-normal lg:text-center lg:text-xl md:max-lg:text-xl md:max-lg:text-center">Dacă ești la început în social media management, poate te confrunți cu aceste situații frustrante:</p>
+            <p class="self-stretch text-grays-1000 text-lg font-normal lg:text-center lg:text-xl md:max-lg:text-xl md:max-lg:text-center">Dacă ești la început în social media marketing, poate te confrunți cu aceste situații frustrante:</p>
         </div>
         <div class="flex-col justify-start items-start gap-6 flex lg:flex-row">
             <div class="px-4 py-6 bg-grays-75 rounded-2xl flex-col justify-start items-center gap-6 flex md:max-lg:w-full">
