--- a/src/sections/L1sec3-f-pacing.html
+++ b/src/sections/L1sec3-f-pacing.html
@@ -1,9 +1,9 @@
-<div class="px-4 bg-beige-200 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36">
+<div class="px-4 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px] xl:flex">
     <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-8 inline-flex lg:py-20">
         <div class="self-stretch flex-col justify-start items-start gap-4 flex">
             <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                 <h3 class="self-stretch text-center text-grays-1000 text-base font-medium lg:text-xl md:max-lg:text-xl">Doar imaginează-ți...</h3>
-                <h2 class="self-stretch text-center text-red-650 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">că începi chiar azi să lucrezi în social media management.</h2>
+                <h2 class="self-stretch text-center text-red-650 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">că începi chiar azi să lucrezi în social media marketing.</h2>
             </div>
             <div class="self-stretch justify-start items-center gap-4 inline-flex">
                 <div class="w-6 h-6 relative  overflow-hidden"><img src="/src/assets/images/icons/sparkling-fill.png" alt="stars icon"></div>
