--- a/src/sections/L1sec4-intro.html
+++ b/src/sections/L1sec4-intro.html
@@ -1,4 +1,4 @@
-<div class="px-4 bg-grays-0 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36">
+<div class="px-4 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px] xl:flex">
     <div class="grow shrink basis-0 py-16 flex-col justify-start items-start inline-flex lg:py-20">
         <div class="px-4 pt-6 pb-6 bg-beige-50 rounded-2xl flex-col justify-start items-start gap-6 flex overflow-hidden lg:px-10 lg:pt-12 lg:pb-12">
             <div class="self-stretch flex-col justify-start items-start gap-4 flex">
