--- a/src/sections/L1sec5-breakdown.html
+++ b/src/sections/L1sec5-breakdown.html
@@ -1,15 +1,15 @@
-<div class="px-4 bg-grays-75 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36">
+<div class="px-4 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px] xl:flex">
     <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-8 inline-flex lg:py-20">
         <div class="place-self-stretch flex-col justify-start items-start gap-4 flex">
             <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                 <h3 class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">The Breakdown</h3>
                 <h2 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">Ce include Toolkit-ul pentru Start Rapid în Social Media?</h2>
             </div>
-            <p class="self-stretch text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl lg:text-center md:max-lg:text-center">Toolkit-ul include 7 resurse esențiale, fiecare creată pentru a te ajuta să economisești timp, să arăți profesionist și să atragi clienți rapid. Fiecare produs este conceput special pentru freelanceri și începători în social media management.</p>
+            <p class="self-stretch text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl lg:text-center md:max-lg:text-center">Toolkit-ul include 7 resurse esențiale, fiecare creată pentru a te ajuta să economisești timp, să arăți profesionist și să atragi clienți rapid. Fiecare produs este conceput special pentru freelanceri și începători în social media marketing.</p>
         </div>
         <div class="self-stretch flex-col justify-start items-start gap-8 flex">
             <div class="self-stretch flex-col justify-start items-start gap-8 flex">
-                <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
+                <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center lg:items-center lg:gap-4 lg:basis-3/5 ">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #1</p>
@@ -35,7 +35,7 @@
                         <img class="" src="/src/assets/images/products/[6x5]-product-1.png" />
                     </div>
                 </div>
-                <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
+                <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center lg:items-center lg:gap-4 lg:basis-3/5 ">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #2</p>
@@ -61,7 +61,7 @@
                         <img class="" src="/src/assets/images/products/[6x5]-product-2.png" />
                     </div>
                 </div>
-                <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
+                <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center lg:items-center lg:gap-4 lg:basis-3/5 ">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #3</p>
@@ -95,7 +95,7 @@
                 <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
             </div>
             <div class="self-stretch flex-col justify-start items-start gap-8 flex">
-                <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
+                <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center lg:items-center lg:gap-4 lg:basis-3/5 ">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #4</p>
@@ -121,7 +121,7 @@
                         <img class="" src="/src/assets/images/products/[6x5]-product-4.png" />
                     </div>
                 </div>
-                <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
+                <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center lg:items-center lg:gap-4 lg:basis-3/5 ">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #5</p>
@@ -147,7 +147,7 @@
                         <img class="" src="/src/assets/images/products/[6x5]-product-5.png" />
                     </div>
                 </div>
-                <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
+                <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center lg:items-center lg:gap-4 lg:basis-3/5 ">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #6</p>
@@ -157,7 +157,7 @@
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center">
                             <div class="self-stretch justify-start items-center gap-3 inline-flex lg:gap-6">
                                 <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
-                                <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">O colecție de șabloane profesionale pentru e-mailuri, potrivite pentru diverse scenarii din social media management.</p>
+                                <p class="grow shrink basis-0 text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">O colecție de șabloane profesionale pentru e-mailuri, potrivite pentru diverse scenarii din social media marketing.</p>
                             </div>
                             <div class="self-stretch justify-center items-center gap-3 inline-flex lg:gap-6">
                                 <img src="/src/assets/images/icons/checkmark-circle.png" alt="checkmark-circle">
@@ -173,7 +173,7 @@
                         <img class="" src="/src/assets/images/products/[6x5]-product-6.png" />
                     </div>
                 </div>
-                <div class="self-stretch px-4 py-6 bg-gradient-to-b from-[#ffead7] to-[#efc59b] rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
+                <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 flex lg:px-10 lg:py-12 lg:flex-row md:max-lg:items-center lg:items-center lg:gap-8">
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center lg:items-center lg:gap-4 lg:basis-3/5 ">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #7</p>
