--- a/src/sections/L1sec6-bonuses.html
+++ b/src/sections/L1sec6-bonuses.html
@@ -1,34 +1,61 @@
-<div class="px-4 bg-white justify-start items-center gap-2 inline-flex">
-    <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-10 inline-flex">
+<div class="px-4 justify-start items-center gap-2 inline-flex md:max-lg:px-16 lg:px-36 xl:my-0 xl:mx-auto xl:max-w-[1500px] xl:flex">
+    <div class="grow shrink basis-0 py-16 flex-col justify-start items-start gap-10 inline-flex lg:py-20">
         <div class="self-stretch flex-col justify-start items-start gap-4 flex">
             <div class="self-stretch flex-col justify-start items-start gap-1 flex">
-                <div class="self-stretch text-center text-red-650 text-base font-medium ">Și asta nu e tot...</div>
-                <div class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif">Vom adapta aceste produse pentru brandul tău...</div>
+                <div class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">Și asta nu e tot...</div>
+                <div class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">Vom adapta aceste produse pentru brandul tău...</div>
             </div>
-            <div class="self-stretch text-grays-1000 text-lg font-normal ">Pentru că vrem să îți oferim cel mai bun start posibil, îți oferim două bonusuri premium, complet GRATUIT, dacă achiziționezi Toolkit-ul acum. Aceste resurse îți vor accelera progresul și te vor ajuta să atragi clienți mai ușor.</div>
+            <div class="self-stretch text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl lg:text-center md:max-lg:text-center">Pentru că vrem să îți oferim cel mai bun start posibil, îți oferim două bonusuri premium, complet GRATUIT, dacă achiziționezi Toolkit-ul acum. Aceste resurse îți vor accelera progresul și te vor ajuta să atragi clienți mai ușor.</div>
         </div>
-        <div class="px-4 pt-6 pb-4 bg-gradient-to-b from-[#fffcfc] to-[#ffecec] rounded-2xl border-4 border-[#ff3636] flex-col justify-start items-start gap-6 flex overflow-hidden">
-            <div class="self-stretch flex-col justify-start items-start gap-3 flex">
-                <div class="self-stretch flex-col justify-start items-start gap-1 flex">
-                    <div class="self-stretch text-center text-red-650 text-base font-medium ">BONUS #1</div>
-                    <div class="self-stretch text-center text-grays-1000 text-2xl font-medium ">Documente personalizate adaptate brandului tău</div>
-                </div>
-                <div class="self-stretch text-center text-grays-1000 text-xl font-normal ">Te ajutăm să începi cu un avantaj clar! Primești documentele esențiale din Toolkit, personalizate după brandul tău.</div>
-            </div>
-            <div class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">Câteva exemple...</div>
-            <div class="pl-1.5 pr-2 rounded-2xl justify-center items-center inline-flex overflow-hidden">
-                <img class="origin-top-left" src="/src/assets/images/placeholder-img5-368x190.png" />
-            </div>
-            <div class="pl-1.5 pr-2 rounded-2xl justify-center items-center inline-flex overflow-hidden">
-                <img class="origin-top-left" src="/src/assets/images/placeholder-img5-368x190.png" />
-            </div>
-            <div class="pl-1.5 pr-2 rounded-2xl justify-center items-center inline-flex overflow-hidden">
-                <img class="origin-top-left" src="/src/assets/images/placeholder-img5-368x190.png" />
-            </div>
-            <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 flex overflow-hidden">
+        <div class="px-4 pt-6 pb-4 bg-gradient-to-b from-[#fffcfc] to-[#ffecec] rounded-2xl border-4 border-[#ff3636] flex-col justify-start items-start gap-6 flex overflow-hidden lg:flex-row lg:px-10 lg:pt-10 lg:pb-10 lg:items-center md:max-lg:justify-center">
+            <div class="flex-col justify-start items-start gap-6 flex overflow-hidden lg:basis-1/2 md:max-lg:justify-center md:max-lg:items-center">
                 <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                     <div class="self-stretch flex-col justify-start items-start gap-1 flex">
-                        <div class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">Ofertă limitată:</div>
+                        <div class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">BONUS #1</div>
+                        <div class="self-stretch text-center text-grays-1000 text-2xl font-medium lg:text-3xl md:max-lg:text-3xl ">Documente personalizate adaptate brandului tău</div>
+                    </div>
+                    <div class="self-stretch text-center text-grays-1000 text-xl font-normal ">Te ajutăm să începi cu un avantaj clar! Primești documentele esențiale din Toolkit, personalizate după brandul tău.</div>
+                </div>
+                <h4 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif lg:hidden">Câteva exemple...</h4>
+                <div class="rounded-2xl justify-center items-center inline-flex overflow-hidden lg:hidden">
+                    <lottie-player class="origin-top-left w-full h-auto" src="https://cdn.lottielab.com/l/7pSBq27oeaVBMS.json" loop autoplay></lottie-player>
+                </div>
+                <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 lg:flex overflow-hidden hidden lg:gap-2">
+                    <div class="self-stretch flex-col justify-start items-start gap-3 flex">
+                        <div class="self-stretch flex-col justify-start items-start gap-1 flex">
+                            <h4 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">Ofertă limitată:</h4>
+                        </div>
+                    </div>
+                    <div class="self-stretch justify-start items-center gap-4 inline-flex">
+                        <div class="grow shrink basis-0 text-grays-1000 text-base font-normal ">Din cauza numărului mare de persoane care procură acest kit, acest bonus este valabil GRATIS pentru o perioadă limitată de timp: </div>
+                    </div>
+                    <div class="timer-container self-stretch p-2 pb-3 bg-grays-75 rounded-lg border-2 border-[#ff0000] justify-center items-center flex flex-col">
+                        <div class="inline-flex items-center gap-2.5">
+                            <div class="text-[#ff0000] text-sm">zile</div>
+                            <div class="text-[#ff0000] text-sm">ore</div>
+                            <div class="text-[#ff0000] text-sm">min</div>
+                            <div class="text-[#ff0000] text-sm">sec</div>
+                        </div>
+                        <div class="inline-flex items-center gap-2">
+                            <div class="days text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
+                            <div class="hours text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
+                            <div class="minutes text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
+                            <div class="seconds text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
+                        </div>
+                    </div>
+                    <p class="self-stretch text-grays-1000 text-sm font-normal lg:hidden">Nu îți face griji, chiar dacă nu reușești să prinzi acestă ofertă gratis, când procuri acest kit, poți opta pentru design propriu contra cost, sau dacă ne place proiectul tău, îți oferim un design personalizat gratis!</p>
+                    <div class="self-stretch flex-col justify-start items-center flex">
+                        <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                            <a href="https://sipunct.com/" class="py-2 px-[10%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                        </div>
+                        <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 flex overflow-hidden lg:hidden">
+                <div class="self-stretch flex-col justify-start items-start gap-3 flex">
+                    <div class="self-stretch flex-col justify-start items-start gap-1 flex">
+                        <h4 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">Ofertă limitată:</h4>
                     </div>
                 </div>
                 <div class="self-stretch justify-start items-center gap-4 inline-flex">
@@ -48,7 +75,7 @@
                         <div class="seconds text-[#ff0000] text-3xl font-medium font-serif w-6 text-center">0</div>
                     </div>
                 </div>
-                <div class="self-stretch text-grays-1000 text-sm font-normal ">Nu îți face griji, chiar dacă nu reușești să prinzi acestă ofertă gratis, când procuri acest kit, poți opta pentru design propriu contra cost, sau dacă ne place proiectul tău, îți oferim un design personalizat gratis!</div>
+                <p class="self-stretch text-grays-1000 text-sm font-normal ">Nu îți face griji, chiar dacă nu reușești să prinzi acestă ofertă gratis, când procuri acest kit, poți opta pentru design propriu contra cost, sau dacă ne place proiectul tău, îți oferim un design personalizat gratis!</p>
                 <div class="self-stretch flex-col justify-start items-center flex">
                     <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
                         <a href="https://sipunct.com/" class="py-2 px-[10%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
@@ -56,24 +83,27 @@
                     <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
                 </div>
             </div>
+            <div class="rounded-2xl justify-center items-center lg:inline-flex overflow-hidden hidden">
+                <lottie-player class="origin-top-left w-full h-auto" src="https://cdn.lottielab.com/l/7pSBq27oeaVBMS.json" loop autoplay></lottie-player>
+            </div>
         </div>
         <div class="self-stretch text-center text-grays-1000 text-2xl font-medium ">Încă ceva...</div>
         <div class="self-stretch flex-col justify-start items-start gap-4 flex">
-            <div class="px-4 pt-6 pb-4 bg-gradient-to-b from-[#f1fff4] to-[#c3f3ce] rounded-2xl border-4 border-[#10f010] flex-col justify-start items-start gap-6 flex overflow-hidden">
-                <div class="self-stretch flex-col justify-start items-start gap-3 flex">
+            <div class="px-4 pt-6 pb-4 bg-gradient-to-b from-[#f1fff4] to-[#c3f3ce] rounded-2xl border-4 border-[#10f010] flex-col justify-start items-start gap-6 flex overflow-hidden lg:flex-row lg:px-10 lg:pt-10 lg:pb-10 lg:items-center md:max-lg:justify-center md:max-lg:items-center">
+                <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:basis-1/2 lg:justify-center">
                     <div class="self-stretch flex-col justify-start items-start gap-1 flex">
-                        <div class="self-stretch text-center text-red-650 text-base font-medium ">BONUS #2</div>
-                        <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-medium ">Ghidul </span><span class="text-[#460a0a] text-2xl font-medium ">„Cum să te pregătești pentru un apel de succes”</span></div>
+                        <h5 class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">BONUS #2</h5>
+                        <h3 class="self-stretch text-center lg:text-3xl md:max-lg:text-3xl "><span class="text-grays-1000 text-2xl font-medium ">Ghidul </span><span class="text-red-850 text-2xl font-medium ">„Cum să te pregătești pentru un apel de succes”</span></h3>
                         <div class="self-stretch text-center"><span class="text-[#7e8897] text-base font-medium ">Valoare: </span><span class="text-[#7e8897] text-base font-medium  line-through">30€</span><span class="text-[#7e8897] text-base font-medium "> - </span><span class="text-red-650 text-lg font-semibold italic">GRATIS</span></div>
                     </div>
                     <div class="self-stretch text-center text-grays-1000 text-xl font-normal ">Un apel de descoperire bine pregătit îți poate aduce clienți pe termen lung. Acest ghid îți arată exact ce trebuie să spui și cum să structurezi apelurile pentru a obține colaborări sigure și profitabile.</div>
                 </div>
-                <div class="pl-1.5 pr-2 bg-gradient-to-br from-[#56423d] to-[#785a52] rounded-2xl justify-center items-center inline-flex overflow-hidden">
-                    <img class="origin-top-left" src="/src/assets/images/placeholder-img5-368x190.png" />
+                <div class="rounded-2xl justify-center items-center inline-flex overflow-hidden lg:basis-auto lg:items-center lg:w-1/2">
+                    <img class="origin-top-left w-full " src="/src/assets/images/placeholder-img-368x368.png" />
                 </div>
             </div>
             <div class="self-stretch flex-col justify-start items-center flex">
-                <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650 lg:w-1/2">
                     <a href="https://sipunct.com/" class="py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
                 </div>
                 <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
