updated CTA section

--- a/src/sections/L1sec6-bonuses.html
+++ b/src/sections/L1sec6-bonuses.html
@@ -3,7 +3,7 @@
         <div class="self-stretch flex-col justify-start items-start gap-4 flex">
             <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                 <div class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">Și asta nu e tot...</div>
-                <div class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">Vom adapta aceste produse pentru brandul tău...</div>
+                <h2 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">Vom adapta aceste produse pentru brandul tău...</h2>
             </div>
             <div class="self-stretch text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl lg:text-center md:max-lg:text-center">Pentru că vrem să îți oferim cel mai bun start posibil, îți oferim două bonusuri premium, complet GRATUIT, dacă achiziționezi Toolkit-ul acum. Aceste resurse îți vor accelera progresul și te vor ajuta să atragi clienți mai ușor.</div>
         </div>
@@ -12,7 +12,7 @@
                 <div class="self-stretch flex-col justify-start items-start gap-3 flex">
                     <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                         <div class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">BONUS #1</div>
-                        <div class="self-stretch text-center text-grays-1000 text-2xl font-medium lg:text-3xl md:max-lg:text-3xl ">Documente personalizate adaptate brandului tău</div>
+                        <h3 class="self-stretch text-center text-grays-1000 text-2xl font-medium lg:text-3xl md:max-lg:text-3xl ">Documente personalizate adaptate brandului tău</h3>
                     </div>
                     <div class="self-stretch text-center text-grays-1000 text-xl font-normal ">Te ajutăm să începi cu un avantaj clar! Primești documentele esențiale din Toolkit, personalizate după brandul tău.</div>
                 </div>
@@ -94,7 +94,7 @@
                     <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                         <h5 class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">BONUS #2</h5>
                         <h3 class="self-stretch text-center lg:text-3xl md:max-lg:text-3xl "><span class="text-grays-1000 text-2xl font-medium ">Ghidul </span><span class="text-red-850 text-2xl font-medium ">„Cum să te pregătești pentru un apel de succes”</span></h3>
-                        <div class="self-stretch text-center"><span class="text-[#7e8897] text-base font-medium ">Valoare: </span><span class="text-[#7e8897] text-base font-medium  line-through">30€</span><span class="text-[#7e8897] text-base font-medium "> - </span><span class="text-red-650 text-lg font-semibold italic">GRATIS</span></div>
+                        <div class="self-stretch text-center"><span class="text-[#7e8897] text-base font-medium lg:text-xl md:max-lg:text-xl">Valoare: </span><span class="text-[#7e8897] text-base font-medium  line-through lg:text-xl md:max-lg:text-xl">30€</span><span class="text-[#7e8897] text-base font-medium "> - </span><span class="text-red-650 text-lg font-semibold italic lg:text-xl md:max-lg:text-xl">GRATIS</span></div>
                     </div>
                     <div class="self-stretch text-center text-grays-1000 text-xl font-normal ">Un apel de descoperire bine pregătit îți poate aduce clienți pe termen lung. Acest ghid îți arată exact ce trebuie să spui și cum să structurezi apelurile pentru a obține colaborări sigure și profitabile.</div>
                 </div>
