--- a/src/sections/L1sec8-mainCTA.html
+++ b/src/sections/L1sec8-mainCTA.html
@@ -3,21 +3,62 @@
         <div class="self-stretch flex-col justify-start items-start gap-8 flex">
             <div class="self-stretch flex-col justify-start items-start gap-4 flex">
                 <div class="self-stretch flex-col justify-start items-start gap-1 flex">
-                    <div class="self-stretch text-center text-red-650 text-base font-medium ">Începe acum</div>
-                    <div class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif">Nu mai amâna succesul tău!</div>
+                    <div class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl">Începe acum</div>
+                    <div class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">Nu mai amâna succesul tău!</div>
                 </div>
-                <div class="self-stretch text-grays-1000 text-lg font-normal ">Nu mai pierde timp încercând să îți dai singur seama ce funcționează și ce nu. Toolkit-ul pentru Start Rapid în Social Media îți oferă tot ce ai nevoie pentru a începe imediat, fără stres și fără confuzie.</div>
+                <div class="self-stretch text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">Nu mai pierde timp încercând să îți dai singur seama ce funcționează și ce nu. Toolkit-ul pentru Start Rapid în Social Media îți oferă tot ce ai nevoie pentru a începe imediat, fără stres și fără confuzie.</div>
             </div>
-            <div class="self-stretch flex-col justify-start items-start gap-4 flex">
-                <div class="rounded-2xl justify-center items-center inline-flex overflow-hidden">
-                    <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
-                </div>
-                <div class="self-stretch flex-col justify-start items-start gap-6 flex">
-                    <div class="self-stretch flex-col justify-start items-start gap-2 flex">
-                        <div class="self-stretch text-grays-1000 text-2xl font-bold font-serif">Toolkit-ul pentru Start Rapid în Social Media</div>
-                        <div class="self-stretch text-grays-1000 text-lg font-normal ">Un sistem complet care îți oferă documente profesionale, ghiduri esențiale și strategii testate, astfel încât să începi rapid și fără stres.</div>
+            <div class="self-stretch flex-col justify-start items-start gap-4 flex lg:flex-row lg:gap-10">
+                <div class="self-stretch flex-col justify-start items-start gap-4 flex lg:basis-1/2">
+                    <div class="rounded-2xl justify-center items-center inline-flex overflow-hidden w-full">
+                        <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
                     </div>
-                    <div class="bg-white flex-col justify-start items-start gap-8 flex">
+                    <div class="flex-col justify-start items-start gap-4 flex-wrap hidden lg:grid lg:grid-cols-2">
+                        <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
+                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                        </div>
+                        <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
+                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                        </div>
+                        <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
+                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                        </div>
+                        <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
+                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                        </div>
+                        <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
+                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                        </div>
+                        <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
+                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                        </div>
+                        <div class="rounded-2xl justify-center items-center overflow-hidden inline-flex">
+                            <img class="origin-top-left" src="/src/assets/images/placeholder-img-368x368.png" />
+                        </div>
+                    </div>
+                </div>
+                <div class="self-stretch flex-col justify-start items-start gap-6 flex lg:basis-1/2">
+                    <div class="self-stretch flex-col justify-start items-start flex">
+                        <div class="self-stretch flex-col justify-start items-start gap-2 flex">
+                            <div class="self-stretch text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl">Toolkit-ul pentru Start Rapid în Social Media</div>
+                            <div class="self-stretch flex-row justify-start items-center gap-2 flex ">
+                                <h3 class="self-stretch  text-grays-1000 text-xl font-bold font-serif leading-9">Preț:</h3>
+                                <h4 class="self-stretch text-grays-600 text-xl font-normal line-through leading-10">245€</h4>
+                                <h3 class="self-stretch text-center text-red-650 text-3xl font-bold font-serif leading-6">45€</h3>
+                            </div>
+                            <div class="self-stretch text-grays-1000 text-lg font-normal lg:text-xl md:max-lg:text-xl">Un sistem complet care îți oferă documente profesionale, ghiduri esențiale și strategii testate, astfel încât să începi rapid și fără stres.</div>
+                        </div>
+                        <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 flex">
+                            
+                            <div class="self-stretch flex-col justify-start items-center flex">
+                                <div class="flex justify-center items-center my-4 w-full bg-red-600 rounded-lg border-transparent border-2 hover:bg-red-500 hover:border-2 hover:border-red-650">
+                                    <a href="https://sipunct.com/" class="py-2 px-[18%] text-xl font-sans font-bold text-grays-75">Ia Toolkit-ul Acum</a>
+                                </div>
+                                <p class="text-base leading-4 font-sans font-semibold text-grays-800 text-center">100% satisfacție garantată sau banii înapoi.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex-col justify-start items-start gap-8 flex">
                         <div class="self-stretch flex-col justify-start items-start gap-2 flex">
                             <div class="self-stretch text-red-650 text-lg font-semibold ">Ce este inclus:</div>
                             <div class="self-stretch flex-col justify-start items-start gap-4 flex">
@@ -181,7 +222,7 @@
                 </div>
                 <div class="self-stretch rounded-lg flex-col justify-center items-center gap-2 flex">
                     <div class="self-stretch flex-col justify-center items-start gap-1 flex">
-                        <div class="self-stretch text-center text-grays-1000 text-lg font-normal ">Total: 245€</div>
+                        <div class="self-stretch text-center text-grays-1000 text-lg font-normal line-through">Total: 245€</div>
                         <div class="self-stretch text-center"><span class="text-grays-1000 text-2xl font-bold font-serif">Preț pentru începători: </span><span class="text-red-650 text-2xl font-bold font-serif">45€</span></div>
                     </div>
                     <div class="self-stretch flex-col justify-start items-center flex">
